<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/read" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/delete" />
    </LinearLayout>
    <TextView
        android:id="@+id/showTxtView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearOne"/>

</RelativeLayout>